feat: merge main

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ openai>=1.6.1
 openpyxl
 beautifulsoup4==4.12.3
 pandas==2.1.1
-pydantic==2.6.4
+pydantic>=2.5.3
 #pygame==2.1.3
 #pymilvus==2.2.8
 # pytest==7.2.2 # test extras require
