exp_pool add `enabled`

--- a/config/config2.example.yaml
+++ b/config/config2.example.yaml
@@ -75,6 +75,7 @@ s3:
   bucket: "test"
 
 exp_pool:
+  enabled: false
   enable_read: false 
   enable_write: false
   persist_path: .chroma_exp_data # The directory.
