--- a/config/config2.example.yaml
+++ b/config/config2.example.yaml
@@ -79,7 +79,7 @@ exp_pool:
   enable_read: false 
   enable_write: false
   persist_path: .chroma_exp_data # The directory.
-  storage_type: bm25 # Default is bm25, can be set to chroma for vector storage, which requires setting up embedding.
+  storage_type: bm25 # Default is `bm25`, can be set to `chroma` for vector storage, which requires setting up embedding.
 
 azure_tts_subscription_key: "YOUR_SUBSCRIPTION_KEY"
 azure_tts_region: "eastus"
