use long-term memory in rolezero

--- a/.gitignore
+++ b/.gitignore
@@ -163,6 +163,7 @@ examples/image__vector_store.json
 examples/index_store.json
 .chroma
 .chroma_exp_data
+.role_memory_data
 *~$*
 workspace/*
 tmp
