add image datasets config

--- a/expo/datasets.yaml
+++ b/expo/datasets.yaml
@@ -183,6 +183,14 @@ datasets:
       \ column `label`.\nPerform data analysis, data preprocessing, feature engineering,\
       \ and modeling to predict the target. \nReport f1 weighted on the eval data.\
       \ Do not plot or make any visualizations.\n"
+  fashion_mnist:
+    dataset: fashion_mnist
+    metric: f1 weighted
+    target_col: label
+    user_requirement: "This is a fashion_mnist dataset. Your goal is to predict the\
+      \ target column `label`.\nPerform data analysis, data preprocessing, feature\
+      \ engineering, and modeling to predict the target. \nReport f1 weighted on the\
+      \ eval data. Do not plot or make any visualizations.\n"
   gnad10:
     dataset: gnad10
     metric: f1 weighted
@@ -191,6 +199,14 @@ datasets:
       \ column `label`.\nPerform data analysis, data preprocessing, feature engineering,\
       \ and modeling to predict the target. \nReport f1 weighted on the eval data.\
       \ Do not plot or make any visualizations.\n"
+  oxford-iiit-pet:
+    dataset: oxford-iiit-pet
+    metric: f1
+    target_col: label_cat_dog
+    user_requirement: "This is a oxford-iiit-pet dataset. Your goal is to predict\
+      \ the target column `label_cat_dog`.\nPerform data analysis, data preprocessing,\
+      \ feature engineering, and modeling to predict the target. \nReport f1 on the\
+      \ eval data. Do not plot or make any visualizations.\n"
   sms_spam:
     dataset: sms_spam
     metric: f1
@@ -199,3 +215,11 @@ datasets:
       \ column `label`.\nPerform data analysis, data preprocessing, feature engineering,\
       \ and modeling to predict the target. \nReport f1 on the eval data. Do not plot\
       \ or make any visualizations.\n"
+  stanford_cars:
+    dataset: stanford_cars
+    metric: f1 weighted
+    target_col: label
+    user_requirement: "This is a stanford_cars dataset. Your goal is to predict the\
+      \ target column `label`.\nPerform data analysis, data preprocessing, feature\
+      \ engineering, and modeling to predict the target. \nReport f1 weighted on the\
+      \ eval data. Do not plot or make any visualizations.\n"
