--- a/expo/datasets.yaml
+++ b/expo/datasets.yaml
@@ -201,10 +201,10 @@ datasets:
       \ Do not plot or make any visualizations.\n"
   oxford-iiit-pet:
     dataset: oxford-iiit-pet
-    metric: f1
+    metric: f1 weighted
     target_col: label
     user_requirement: "This is a oxford-iiit-pet dataset. Your goal is to predict\
-      \ the target column `label_cat_dog`.\nPerform data analysis, data preprocessing,\
+      \ the target column `label`.\nPerform data analysis, data preprocessing,\
       \ feature engineering, and modeling to predict the target. \nReport f1 on the\
       \ eval data. Do not plot or make any visualizations.\n"
   sms_spam:
