--- a/config/config2.example.yaml
+++ b/config/config2.example.yaml
@@ -86,6 +86,7 @@ exp_pool:
 role_zero:
   enable_longterm_memory: false # Whether to use long-term memory. Default is `false`.
   longterm_memory_persist_path: .role_memory_data # The directory to save data.
+  memory_k: 200 # The capacity of short-term memory.
 
 azure_tts_subscription_key: "YOUR_SUBSCRIPTION_KEY"
 azure_tts_region: "eastus"
