make use_llm_ranker configurable

--- a/config/config2.example.yaml
+++ b/config/config2.example.yaml
@@ -88,7 +88,7 @@ role_zero:
   longterm_memory_persist_path: .role_memory_data # The directory to save data.
   memory_k: 200 # The capacity of short-term memory.
   similarity_top_k: 5 # The number of long-term memories to retrieve.
-  use_llm_ranker: false # Default is `false`, if set to `true`, it will use LLM Reranker to get better result.
+  use_llm_ranker: false # Whether to use LLM Reranker to get better result. Default is `false`.
 
 azure_tts_subscription_key: "YOUR_SUBSCRIPTION_KEY"
 azure_tts_region: "eastus"
