update requirements.txt and fix editor

--- a/requirements.txt
+++ b/requirements.txt
@@ -76,3 +76,5 @@ htmlmin
 fsspec
 grep-ast~=0.3.3  # linter
 tree-sitter~=0.21.3  # linter
+unidiff==0.7.5 # used at metagpt/tools/libs/cr.py
+httpx==0.27.2
