--- a/.gitignore
+++ b/.gitignore
@@ -167,7 +167,7 @@ examples/index_store.json
 *~$*
 workspace/*
 tmp
-metagpt/roles/idea_agent.py
+# metagpt/roles/idea_agent.py
 .aider*
 *.bak
 *.bk
