--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-aiohttp==3.8.6
+aiohttp==3.9.3
 #azure_storage==0.37.0
 channels==4.0.0
 # Django==4.1.5
@@ -7,30 +7,30 @@ channels==4.0.0
 faiss_cpu==1.7.4
 fire==0.4.0
 typer==0.9.0
-# godot==0.1.1
-# google_api_python_client==2.93.0  # Used by search_engine.py
+#godot==0.1.1
+google_api_python_client==2.93.0  # Used by search_engine.py
 lancedb==0.4.0
 loguru==0.6.0
 meilisearch==0.21.0
-numpy~=1.26.4
+numpy==1.26.2
 openai~=1.64.0
 openpyxl~=3.1.5
 beautifulsoup4==4.12.3
 pandas==2.1.1
 pydantic>=2.5.3
-#pygame==2.1.3
-# pymilvus==2.4.6
-# pytest==7.2.2 # test extras require
+pygame==2.1.3
+pymilvus==2.4.6
+pytest==7.2.2 # test extras require
 python_docx==0.8.11
 PyYAML==6.0.1
-# sentence_transformers==2.2.2
-setuptools==65.6.3
+sentence_transformers==2.2.2
+#setuptools==65.6.3
 tenacity==8.2.3
 tiktoken==0.7.0
 tqdm==4.66.2
 #unstructured[local-inference]
-# selenium>4
-# webdriver_manager<3.9
+selenium>4
+webdriver_manager<3.9
 anthropic==0.47.2
 typing-inspect==0.8.0
 libcst==1.0.1
@@ -38,14 +38,15 @@ qdrant-client==1.7.0
 grpcio~=1.67.0
 grpcio-tools~=1.62.3
 grpcio-status~=1.62.3
-# pytest-mock==3.11.1  # test extras require
-# open-interpreter==0.1.7; python_version>"3.9" # Conflict with openai 1.x
+pytest-mock==3.11.1  # test extras require
+#open-interpreter==0.1.7; python_version>"3.9" # Conflict with openai 1.x
 ta==0.10.2
-semantic-kernel==0.4.3.dev0
+#semantic-kernel==0.9.6.dev0
+semantic-kernel==0.9.6b1
 wrapt==1.15.0
-#aiohttp_jinja2
-# azure-cognitiveservices-speech~=1.31.0 # Used by metagpt/tools/azure_tts.py
-#aioboto3~=12.4.0  # Used by metagpt/utils/s3.py
+aiohttp_jinja2
+azure-cognitiveservices-speech~=1.31.0 # Used by metagpt/tools/azure_tts.py
+aioboto3~=12.4.0  # Used by metagpt/utils/s3.py
 redis~=5.0.0 # Used by metagpt/utils/redis.py
 curl-cffi~=0.7.0
 httplib2~=0.22.0
@@ -59,10 +60,10 @@ nbformat==5.9.2
 ipython==8.17.2
 ipykernel==6.27.1
 scikit_learn==1.3.2
-typing-extensions==4.11.0
+typing-extensions>=4.12.2
 socksio~=1.0.0
 gitignore-parser==0.1.9
-# connexion[uvicorn]~=3.0.5 # Used by metagpt/tools/openapi_v3_hello.py
+connexion[uvicorn]~=3.0.5 # Used by metagpt/tools/openapi_v3_hello.py
 websockets>=10.0,<12.0
 networkx~=3.2.1
 google-generativeai==0.4.1
@@ -88,3 +89,5 @@ spark_ai_python~=0.3.30
 tree_sitter~=0.23.2
 tree_sitter_python~=0.23.2
 httpx==0.28.1
+
+antlr4-python3-runtime==4.9.3
