--- a/requirements.txt
+++ b/requirements.txt
@@ -17,8 +17,8 @@ openai~=1.64.0
 openpyxl~=3.1.5
 beautifulsoup4==4.12.3
 pandas==2.1.1
+semantic-kernel==0.3.11.dev0
 pydantic==1.10.12
-semantic-kernel==0.9.6b1
 pygame==2.1.3
 pymilvus==2.4.6
 pytest==7.2.2 # test extras require
