--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ lancedb==0.4.0
 loguru==0.6.0
 meilisearch==0.21.0
 numpy==1.26.2
-openai~=1.64.0
+openai==0.27.10
 openpyxl~=3.1.5
 beautifulsoup4==4.12.3
 pandas==2.1.1
