--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,15 +11,93 @@ requires-python = ">=3.8"
 license = { text = "MIT" }
 
 authors = [
-  { name = "Your Name", email = "your.email@example.com" }
+  { name = "halim ghazi", email = "halimghazi7@gmail.com" }
 ]
 
 dependencies = [
-  "openai>=1.0",
-  "requests>=2.25",
-  "fire",
-  "python-docx",
-  # add other dependencies here
+  "aiohttp==3.9.3",
+  "channels==4.0.0",
+  "faiss_cpu==1.7.4",
+  "fire==0.4.0",
+  "typer==0.9.0",
+  "google-api-python-client==2.93.0",
+  "lancedb==0.4.0",
+  "loguru==0.6.0",
+  "meilisearch==0.21.0",
+  "numpy==1.26.2",
+  "openai==0.27.10",
+  "openpyxl~=3.1.5",
+  "beautifulsoup4==4.12.3",
+  "pandas==2.1.1",
+  "semantic-kernel==0.3.11.dev0",
+  "pydantic==1.10.12",
+  "pygame==2.1.3",
+  "pymilvus==2.4.6",
+  "pytest==7.2.2",
+  "python-docx==0.8.11",
+  "PyYAML==6.0.1",
+  "sentence-transformers==2.2.2",
+  "tenacity==8.2.3",
+  "tiktoken==0.7.0",
+  "tqdm==4.66.2",
+  "selenium>4",
+  "webdriver-manager<3.9",
+  "anthropic==0.47.2",
+  "typing-inspect==0.8.0",
+  "libcst==1.0.1",
+  "qdrant-client==1.7.0",
+  "grpcio~=1.67.0",
+  "grpcio-tools~=1.62.3",
+  "grpcio-status~=1.62.3",
+  "pytest-mock==3.11.1",
+  "ta==0.10.2",
+  "wrapt==1.15.0",
+  "aiohttp_jinja2",
+  "azure-cognitiveservices-speech~=1.31.0",
+  "aioboto3~=12.4.0",
+  "redis~=5.0.0",
+  "curl-cffi~=0.7.0",
+  "httplib2~=0.22.0",
+  "websocket-client~=1.8.0",
+  "aiofiles==23.2.1",
+  "gitpython==3.1.40",
+  "zhipuai~=2.1.5",
+  "rich==13.6.0",
+  "nbclient==0.9.0",
+  "nbformat==5.9.2",
+  "ipython==8.17.2",
+  "ipykernel==6.27.1",
+  "scikit-learn==1.3.2",
+  "typing-extensions>=4.12.2",
+  "socksio~=1.0.0",
+  "gitignore-parser==0.1.9",
+  "connexion[uvicorn]~=3.0.5",
+  "websockets>=10.0,<12.0",
+  "networkx~=3.2.1",
+  "google-generativeai==0.4.1",
+  "playwright>=1.26",
+  "anytree",
+  "ipywidgets==8.1.1",
+  "Pillow",
+  "imap_tools==1.5.0",
+  "pylint~=3.0.3",
+  "pygithub~=2.3",
+  "htmlmin",
+  "fsspec",
+  "grep-ast~=0.3.3",
+  "unidiff==0.7.5",
+  "qianfan~=0.4.4",
+  "dashscope~=1.19.3",
+  "rank-bm25==0.2.2",
+  "jieba==0.42.1",
+  "volcengine-python-sdk[ark]~=1.0.94",
+  "gymnasium==0.29.1",
+  "boto3~=1.34.69",
+  "spark_ai_python~=0.3.30",
+  "tree-sitter~=0.23.2",
+  "tree-sitter-python~=0.23.2",
+  "httpx==0.28.1",
+  "antlr4-python3-runtime==4.9.3"
 ]
 
 [project.urls]
