--- a/requirements.txt
+++ b/requirements.txt
@@ -131,7 +131,7 @@ matplotlib-inline==0.1.7
 mccabe==0.7.0
 mdurl==0.1.2
 meilisearch==0.34.1
-#metagpt @ git+https://github.com/r00texploit/udressgpt.git@55b6f6ee1b018f7c61e8a2acf8beda8b9ff12af4
+metagpt @ git+https://github.com/r00texploit/udressgpt.git@55b6f6ee1b018f7c61e8a2acf8beda8b9ff12af4
 more-itertools==10.7.0
 motor==3.7.1
 mpmath==1.3.0
@@ -283,3 +283,101 @@ wsproto==1.2.0
 yarl==1.20.0
 zhipuai==2.1.5.20250421
 zipp==3.21.0
+
+==========================================
+
+aiohttp
+#azure_storage
+channels
+# Django
+# docx
+#faiss
+faiss_cpu
+fire
+typer
+#godot
+google_api_python_client
+lancedb
+loguru
+meilisearch
+numpy
+openai
+openpyxl
+beautifulsoup4
+pandas
+semantic-kernel
+pydantic
+pygame
+pymilvus
+pytest
+python_docx
+PyYAML
+sentence_transformers
+#setuptools
+tenacity
+tiktoken
+tqdm
+#unstructured[local-inference]
+selenium
+webdriver_manager
+anthropic
+typing-inspect
+libcst
+qdrant-client
+grpcio
+grpcio-tools
+grpcio-status
+pytest-mock
+#open-interpreter
+ta
+#semantic-kernel
+#semantic-kernel
+wrapt
+aiohttp_jinja2
+azure-cognitiveservices-speech # Used by metagpt/tools/azure_tts.py
+aioboto3  # Used by metagpt/utils/s3.py
+redis # Used by metagpt/utils/redis.py
+curl-cffi # Used by metagpt/utils/curl.py
+httplib2 # Used by metagpt/utils/httplib2.py
+websocket-client # Used by metagpt/utils/websocket.py
+aiofiles # Used by metagpt/utils/aiofiles.py
+gitpython # Used by metagpt/utils/git.py
+zhipuai
+rich
+nbclient
+nbformat
+ipython
+ipykernel
+scikit_learn
+typing-extensions
+socksio
+gitignore-parser
+connexion[uvicorn] # Used by metagpt/tools/openapi_v3_hello.py
+websockets
+networkx
+google-generativeai
+playwright # used at metagpt/tools/libs/web_scraping.py
+anytree
+ipywidgets
+Pillow
+imap_tools
+pylint
+pygithub
+htmlmin
+fsspec
+grep-ast
+unidiff
+qianfan
+dashscope
+rank-bm25
+jieba
+volcengine-python-sdk[ark] # Solution for installation error in Windows: https://github.com/volcengine/volcengine-python-sdk/issues/5
+gymnasium
+boto3
+spark_ai_python
+tree_sitter
+tree_sitter_python
+httpx
+
+antlr4-python3-runtime
+
