--- a/requirements.txt
+++ b/requirements.txt
@@ -1,52 +1,36 @@
-aioboto3==14.3.0
-aiobotocore==2.22.0
 aiofiles==23.2.1
-aiohappyeyeballs==2.6.1
-aiohttp==3.11.18
-aiohttp-jinja2==1.6
-aioice==0.10.1
-aioitertools==0.12.0
+aiohttp==3.8.6
 aiolimiter==1.2.1
-aiortc==1.12.0
 aiosignal==1.3.2
 annotated-types==0.7.0
-anthropic==0.51.0
-antlr4-python3-runtime==4.13.2
+anthropic==0.47.2
 anyio==4.9.0
 anytree==2.13.0
 asgiref==3.8.1
-astroid==3.3.10
+astroid==3.0.3
 asttokens==3.0.0
-async-timeout==5.0.1
+async-timeout==4.0.3
 attrs==25.3.0
-av==14.3.0
-azure-cognitiveservices-speech==1.43.0
-azure-core==1.34.0
-azure-identity==1.23.0
 bce-python-sdk==0.9.29
-beautifulsoup4==4.13.4
-boto3==1.37.3
-botocore==1.37.3
+beautifulsoup4==4.12.3
+boto3==1.34.162
+botocore==1.34.162
 cachetools==5.5.2
 camel-converter==4.0.1
 certifi==2025.4.26
 cffi==1.17.1
-channels==4.2.2
+channels==4.0.0
 chardet==5.2.0
 charset-normalizer==3.4.2
-click==8.1.8
-cloudevents==1.11.0
+click==8.2.0
 cloudpickle==3.1.1
 colorama==0.4.6
 comm==0.2.2
-connexion==3.2.0
-cryptography==44.0.3
-curl_cffi==0.11.1
-dashscope==1.23.3
-dataclasses==0.6
+cryptography==43.0.3
+curl_cffi==0.7.4
+dashscope==1.19.3
 debugpy==1.8.14
 decorator==5.2.1
-defusedxml==0.7.1
 Deprecated==1.2.18
 deprecation==2.1.0
 dill==0.4.0
@@ -54,59 +38,46 @@ diskcache==5.6.3
 distro==1.9.0
 Django==5.2.1
 dnspython==2.7.0
-environs==9.5.0
 et_xmlfile==2.0.0
 executing==2.2.0
-faiss-cpu==1.11.0
+faiss-cpu==1.7.4
 Farama-Notifications==0.0.4
 fastjsonschema==2.21.1
-filelock==3.18.0
-fire==0.7.0
+fire==0.4.0
 frozenlist==1.6.0
 fsspec==2025.3.2
 future==1.0.0
 gitdb==4.0.12
-gitignore_parser==0.1.12
-GitPython==3.1.44
-google-ai-generativelanguage==0.6.15
+gitignore_parser==0.1.9
+GitPython==3.1.40
+google-ai-generativelanguage==0.4.0
 google-api-core==2.25.0rc1
-google-api-python-client==2.169.0
 google-auth==2.40.1
-google-auth-httplib2==0.2.0
-google-crc32c==1.7.1
-google-generativeai==0.8.5
+google-generativeai==0.4.1
 googleapis-common-protos==1.70.0
 greenlet==3.2.2
-grep-ast==0.9.0
-grpcio==1.71.0
-grpcio-status==1.71.0
-grpcio-tools==1.71.0
-gymnasium==1.1.1
+grep-ast==0.3.3
+grpcio==1.67.1
+grpcio-status==1.62.3
+grpcio-tools==1.62.3
+gymnasium==0.29.1
 h11==0.16.0
 h2==4.2.0
 hpack==4.1.0
 htmlmin==0.1.12
 httpcore==1.0.9
 httplib2==0.22.0
-httptools==0.6.4
 httpx==0.28.1
-huggingface-hub==0.31.2
 hyperframe==6.1.0
 idna==3.10
-ifaddr==0.2.0
-imap-tools==1.10.0
-importlib_metadata==8.6.1
-inflection==0.5.1
-iniconfig==2.1.0
-ipykernel==6.29.5
-ipython==9.2.0
-ipython_pygments_lexers==1.1.1
-ipywidgets==8.1.7
+imap-tools==1.5.0
+ipykernel==6.27.1
+ipython==8.17.2
+ipywidgets==8.1.1
 isodate==0.7.2
-isort==6.0.1
+isort==5.13.2
 jedi==0.19.2
 jieba==0.42.1
-Jinja2==3.1.6
 jiter==0.9.0
 jmespath==1.0.1
 joblib==1.5.0
@@ -119,44 +90,36 @@ jsonschema-specifications==2023.7.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 jupyterlab_widgets==3.0.15
-lancedb==0.22.0
+lancedb==0.4.0
 lazy-object-proxy==1.11.0
-libcst==1.7.0
-loguru==0.7.3
+libcst==1.0.1
+loguru==0.6.0
 lxml==5.4.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
-marshmallow==4.0.0
 matplotlib-inline==0.1.7
 mccabe==0.7.0
 mdurl==0.1.2
-meilisearch==0.34.1
-metagpt @ git+https://github.com/r00texploit/udressgpt.git@55b6f6ee1b018f7c61e8a2acf8beda8b9ff12af4
+meilisearch==0.21.0
+metagpt==1.0.0
 more-itertools==10.7.0
 motor==3.7.1
-mpmath==1.3.0
-msal==1.32.3
-msal-extensions==1.3.1
 multidict==6.4.3
 multiprocess==0.70.18
 mypy_extensions==1.1.0
-nbclient==0.10.2
-nbformat==5.10.4
+nbclient==0.9.0
+nbformat==5.9.2
 nest-asyncio==1.6.0
-networkx==3.4.2
+networkx==3.2.1
 numpy==1.26.4
-openai==1.78.1
+openai==1.64.0
 openapi-core==0.18.2
 openapi-schema-validator==0.6.3
 openapi-spec-validator==0.7.1
 openpyxl==3.1.5
-opentelemetry-api==1.33.0
-opentelemetry-sdk==1.33.0
-opentelemetry-semantic-conventions==0.54b0
-outcome==1.3.0.post0
 overrides==7.7.0
 packaging==25.0
-pandas==2.2.3
+pandas==2.1.1
 parse==1.20.2
 parso==0.8.4
 pathable==0.4.4
@@ -164,220 +127,91 @@ pathspec==0.12.1
 pillow==11.2.1
 platformdirs==4.3.8
 playwright==1.52.0
-pluggy==1.5.0
 portalocker==2.10.1
 prance==23.6.21.0
 prompt_toolkit==3.0.51
 propcache==0.3.1
 proto-plus==1.26.1
-protobuf==5.29.4
+protobuf==4.25.7
 psutil==7.0.0
 pure_eval==0.2.3
+py==1.11.0
 pyarrow==20.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
-pybars4==0.9.13
 pycparser==2.22
 pycryptodome==3.22.0
-pydantic==2.9.0
-pydantic-settings==2.9.1
-pydantic_core==2.23.2
+pydantic==2.9.2
+pydantic_core==2.23.4
 pyee==13.0.0
-pygame==2.6.1
 PyGithub==2.6.1
 Pygments==2.19.1
 PyJWT==2.8.0
-pylibsrtp==0.12.0
-pylint==3.3.7
-PyMeta3==0.5.1
-pymilvus==2.4.9
+pylance==0.9.0
+pylint==3.0.4
 pymongo==4.13.0
 PyNaCl==1.5.0
-pyOpenSSL==25.0.0
 pyparsing==3.2.3
-PySocks==1.7.1
-pytest==8.3.5
-pytest-mock==3.14.0
 python-dateutil==2.9.0.post0
-python-docx==1.1.2
+python-docx==0.8.11
 python-dotenv==1.0.0
-python-multipart==0.0.20
 pytz==2025.2
 pywin32==310
-PyYAML==6.0.2
+PyYAML==6.0.1
 pyzmq==26.4.0
-qdrant-client==1.14.2
+qdrant-client==1.7.0
 qianfan==0.4.12.3
 rank-bm25==0.2.2
-redis==6.1.0
+ratelimiter==1.2.0.post0
+redis==5.0.8
 referencing==0.30.2
 regex==2023.12.25
 requests==2.32.3
+retry==0.9.2
 rfc3339-validator==0.1.4
-rich==14.0.0
+rich==13.6.0
 rpds-py==0.24.0
 rsa==4.9.1
 ruamel.yaml==0.18.10
 ruamel.yaml.clib==0.2.12
-s3transfer==0.11.3
-safetensors==0.5.3
-scikit-learn==1.6.1
+s3transfer==0.10.4
+scikit-learn==1.3.2
 scipy==1.15.3
-selenium==4.32.0
 semantic-kernel==0.4.3.dev0
-sentence-transformers==4.1.0
-shellingham==1.5.4
+semver==3.0.4
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
 socksio==1.0.0
-sortedcontainers==2.4.0
 soupsieve==2.7
-spark-ai-python==0.4.5
+spark-ai-python==0.3.31
 sqlparse==0.5.3
 stack-data==0.6.3
-starlette==0.46.2
-sympy==1.14.0
-ta==0.11.0
-tenacity==8.5.0
+ta==0.10.2
+tenacity==8.2.3
 termcolor==3.1.0
 threadpoolctl==3.6.0
-tiktoken==0.9.0
-tokenizers==0.21.1
+tiktoken==0.7.0
 tomlkit==0.13.2
-torch==2.7.0
 tornado==6.4.2
-tqdm==4.67.1
+tqdm==4.66.2
 traitlets==5.14.3
-transformers==4.51.3
 tree-sitter==0.23.2
-tree-sitter-c-sharp==0.23.1
-tree-sitter-embedded-template==0.23.2
-tree-sitter-language-pack==0.7.3
 tree-sitter-languages==1.10.2
 tree-sitter-python==0.23.6
-tree-sitter-yaml==0.7.0
-trio==0.30.0
-trio-websocket==0.12.2
-typer==0.15.4
-typing-inspect==0.9.0
-typing-inspection==0.4.0
-typing_extensions==4.13.2
+typer==0.9.0
+typing-inspect==0.8.0
+typing_extensions==4.11.0
 tzdata==2025.2
-ujson==5.10.0
 unidiff==0.7.5
-uritemplate==4.1.1
-urllib3==2.4.0
-uvicorn==0.34.2
-volcengine-python-sdk==1.0.103
-watchfiles==1.0.5
+urllib3==1.26.20
+volcengine-python-sdk==1.0.130
 wcwidth==0.2.13
-webdriver-manager==4.0.2
 websocket-client==1.8.0
-websockets==15.0.1
-Werkzeug==3.1.1
+websockets==11.0.3
+Werkzeug==3.1.3
 widgetsnbextension==4.0.14
 win32_setctime==1.2.0
-wrapt==1.17.2
-wsproto==1.2.0
+wrapt==1.15.0
 yarl==1.20.0
 zhipuai==2.1.5.20250421
-zipp==3.21.0
-
-==========================================
-
-aiohttp
-#azure_storage
-channels
-# Django
-# docx
-#faiss
-faiss_cpu
-fire
-typer
-#godot
-google_api_python_client
-lancedb
-loguru
-meilisearch
-numpy
-openai
-openpyxl
-beautifulsoup4
-pandas
-semantic-kernel
-pydantic
-pygame
-pymilvus
-pytest
-python_docx
-PyYAML
-sentence_transformers
-#setuptools
-tenacity
-tiktoken
-tqdm
-#unstructured[local-inference]
-selenium
-webdriver_manager
-anthropic
-typing-inspect
-libcst
-qdrant-client
-grpcio
-grpcio-tools
-grpcio-status
-pytest-mock
-#open-interpreter
-ta
-#semantic-kernel
-#semantic-kernel
-wrapt
-aiohttp_jinja2
-azure-cognitiveservices-speech # Used by metagpt/tools/azure_tts.py
-aioboto3  # Used by metagpt/utils/s3.py
-redis # Used by metagpt/utils/redis.py
-curl-cffi # Used by metagpt/utils/curl.py
-httplib2 # Used by metagpt/utils/httplib2.py
-websocket-client # Used by metagpt/utils/websocket.py
-aiofiles # Used by metagpt/utils/aiofiles.py
-gitpython # Used by metagpt/utils/git.py
-zhipuai
-rich
-nbclient
-nbformat
-ipython
-ipykernel
-scikit_learn
-typing-extensions
-socksio
-gitignore-parser
-connexion[uvicorn] # Used by metagpt/tools/openapi_v3_hello.py
-websockets
-networkx
-google-generativeai
-playwright # used at metagpt/tools/libs/web_scraping.py
-anytree
-ipywidgets
-Pillow
-imap_tools
-pylint
-pygithub
-htmlmin
-fsspec
-grep-ast
-unidiff
-qianfan
-dashscope
-rank-bm25
-jieba
-volcengine-python-sdk[ark] # Solution for installation error in Windows: https://github.com/volcengine/volcengine-python-sdk/issues/5
-gymnasium
-boto3
-spark_ai_python
-tree_sitter
-tree_sitter_python
-httpx
-
-antlr4-python3-runtime
-
